UI Imporovement on Place Order View
Reactive Scroll View when user input is detected - Moving the scroll View up

--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -696,8 +696,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lil-68-s6g">
-                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lil-68-s6g">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1a7-KC-GAG">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
@@ -850,6 +850,7 @@
                         <outlet property="locationNameLabel" destination="aUL-Zd-BCB" id="43M-Cd-PnH"/>
                         <outlet property="nameForCollectionTextField" destination="Dg8-ex-Ty9" id="lSk-Hq-pUn"/>
                         <outlet property="placeOrderButtonOutlet" destination="uih-T1-xAJ" id="SFH-Uk-Vpi"/>
+                        <outlet property="placeOrderScrollView" destination="Lil-68-s6g" id="eWw-rx-gDP"/>
                         <outlet property="selectPickupTimeTextField" destination="gPX-jK-ttL" id="z6x-Gv-PZt"/>
                     </connections>
                 </viewController>
