--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -682,11 +682,12 @@
                     </view>
                     <connections>
                         <outlet property="viewOrderTableView" destination="59q-Y9-DqQ" id="53l-Uh-2nr"/>
+                        <segue destination="oMZ-mx-SAe" kind="show" id="DBx-px-FT1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O8Q-gp-jal" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3645.5999999999999" y="92.364532019704441"/>
+            <point key="canvasLocation" x="3646" y="92"/>
         </scene>
         <!--Order-->
         <scene sceneID="FVQ-sl-PI8">
@@ -861,7 +862,6 @@
         <!--Active Order-->
         <scene sceneID="15M-GM-KZG">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AyP-WC-Ypr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Active Order" id="8S1-Bc-a7n" customClass="ActiveOrder" customModule="To_Go" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nMW-sP-8Ic">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
@@ -1049,6 +1049,7 @@
                         <outlet property="activeOrderTimerLabel" destination="ULy-Bh-iVc" id="KBf-4S-lFf"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AyP-WC-Ypr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4729" y="855"/>
         </scene>
@@ -1315,11 +1316,11 @@
             <objects>
                 <viewController title="Update Extras" id="oMZ-mx-SAe" customClass="AddExtrasVC" customModule="To_Go" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Axr-yJ-VZt">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Msb-h2-ghv">
-                                <rect key="frame" x="0.0" y="44" width="375" height="684"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="591"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddExtrasTableViewCell" rowHeight="80" id="hSx-DO-pmV" customClass="AddExtrasTableViewCell" customModule="To_Go" customModuleProvider="target">
@@ -1368,7 +1369,7 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j2p-et-Afh">
-                                <rect key="frame" x="0.0" y="728" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="679" width="375" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J76-63-ZXz">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
