--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -621,7 +621,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="59q-Y9-DqQ">
-                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="613"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ViewOrderTableViewCell" rowHeight="87" id="zLD-jb-n3x" userLabel="ViewOrderTableViewCell" customClass="ViewOrderTableViewCell" customModule="To_Go" customModuleProvider="target">
@@ -705,10 +705,14 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f7k-Mb-zPC">
-                                <rect key="frame" x="0.0" y="679" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="651" width="375" height="78"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xfc-eY-S5c">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                                        <color key="backgroundColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Pes-pT-sJo"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <state key="normal" title="Order">
                                             <color key="titleColor" red="0.28627450980000002" green="0.28627450980000002" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -717,15 +721,37 @@
                                             <segue destination="YwY-Uq-lnA" kind="show" id="0cg-Xs-17i"/>
                                         </connections>
                                     </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bAt-za-H8F">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="28"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDa-kq-xLf">
+                                                <rect key="frame" x="0.0" y="4" width="187.66666666666666" height="20.333333333333332"/>
+                                                <color key="backgroundColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cost" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4C-5n-5MZ">
+                                                <rect key="frame" x="187.66666666666663" y="4" width="187.33333333333337" height="20.333333333333332"/>
+                                                <color key="backgroundColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </stackView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.458770752" green="0.45885384080000002" blue="0.45876550669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Xfc-eY-S5c" firstAttribute="top" secondItem="f7k-Mb-zPC" secondAttribute="top" id="EVo-8v-GLE"/>
-                                    <constraint firstAttribute="height" constant="50" id="JuH-aB-Yi3"/>
+                                    <constraint firstItem="Xfc-eY-S5c" firstAttribute="top" secondItem="bAt-za-H8F" secondAttribute="bottom" id="4Ba-Up-AII"/>
+                                    <constraint firstAttribute="height" constant="78" id="JuH-aB-Yi3"/>
                                     <constraint firstAttribute="trailing" secondItem="Xfc-eY-S5c" secondAttribute="trailing" id="KHj-8J-oub"/>
+                                    <constraint firstAttribute="trailing" secondItem="bAt-za-H8F" secondAttribute="trailing" id="NmO-xM-N7t"/>
+                                    <constraint firstItem="bAt-za-H8F" firstAttribute="top" secondItem="f7k-Mb-zPC" secondAttribute="top" id="WDJ-ZL-Est"/>
                                     <constraint firstItem="Xfc-eY-S5c" firstAttribute="leading" secondItem="f7k-Mb-zPC" secondAttribute="leading" id="ZaT-IF-7p0"/>
-                                    <constraint firstItem="Xfc-eY-S5c" firstAttribute="top" secondItem="f7k-Mb-zPC" secondAttribute="top" id="fJX-yh-T0z"/>
                                     <constraint firstAttribute="bottom" secondItem="Xfc-eY-S5c" secondAttribute="bottom" id="fpk-sV-k0h"/>
+                                    <constraint firstItem="bAt-za-H8F" firstAttribute="leading" secondItem="f7k-Mb-zPC" secondAttribute="leading" id="qQK-XJ-nXH"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -742,6 +768,7 @@
                         <viewLayoutGuide key="safeArea" id="Wzi-Mo-Xy6"/>
                     </view>
                     <connections>
+                        <outlet property="orderTotalLbl" destination="g4C-5n-5MZ" id="1Ei-Pb-nnP"/>
                         <outlet property="viewOrderTableView" destination="59q-Y9-DqQ" id="53l-Uh-2nr"/>
                         <segue destination="oMZ-mx-SAe" kind="show" id="DBx-px-FT1"/>
                     </connections>
